src/css/files.css
/**
 * @file
 * Styling for the file finder webapp.
 */

.file-finder-form {
  background-color: #eee;
  margin-bottom: 1em;
  padding: 1em;
}

fieldset.file-finder-form__element {
  border: 0;
  margin-left: 0;
  margin-right: 0;
  padding: 0;
}

.file-finder-form__element legend.env-form-element__label {
  padding: 0;
}

.file-finder-form__label {
  font-weight: 700;
}

.file-finder-form__radio {
  display: inline-block;
}

.file-finder-form__radio:not(:last-child) {
  margin-right: 1em;
}

.file-finder-form__element--submit .file-finder-form__button {
  font-size: 1em;
  line-height: 1.25em;
  padding: 0.5em 1em;
}

.file-finder__results-table {
  table-layout: fixed;
}

.env-badge--repo-type-site-file-type {
  background-color: #2c3e50;
}

.env-badge--repo-type-site-image-type {
  background-color: #287CB4;
}

.env-badge--repo-type-local-file-type {
  background-color: #8e44ad;
}

.env-badge--repo-type-local-image-type {
  background-color: #12866F;
}

.env-badge--repo-type-group-file-type {
  background-color: #ED0D00;
}

.env-badge--repo-type-group-image-type {
  background-color: #A36B00;
}


/* Accessibility fixes */

.file-finder-form__input,
label .file-finder-form__radio__fake:after {
  border-color: #666;
}

